RESOLVED FIXED233291
[css-values-4] Dynamic `dv*` viewport units should not respect the page scale
https://bugs.webkit.org/show_bug.cgi?id=233291
Summary [css-values-4] Dynamic `dv*` viewport units should not respect the page scale
Devin Rousso
Reported 2021-11-17 16:21:51 PST
.
Attachments
Patch (22.59 KB, patch)
2021-11-17 16:27 PST, Devin Rousso
no flags
Patch (28.18 KB, patch)
2021-11-18 00:26 PST, Devin Rousso
no flags
Patch (25.91 KB, patch)
2021-11-18 14:19 PST, Devin Rousso
no flags
Patch (23.01 KB, patch)
2021-11-18 14:28 PST, Devin Rousso
no flags
Patch (24.68 KB, patch)
2021-11-30 12:53 PST, Devin Rousso
no flags
Devin Rousso
Comment 1 2021-11-17 16:27:54 PST
Simon Fraser (smfr)
Comment 2 2021-11-17 16:35:14 PST
Comment on attachment 444599 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=444599&action=review > Source/WebCore/page/FrameView.cpp:5680 > + return layoutViewportRect().size(); Have you tested the behavior in MobileSafari/SFSafariViewController/Web.app?
Devin Rousso
Comment 3 2021-11-17 16:43:49 PST
Comment on attachment 444599 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=444599&action=review >> Source/WebCore/page/FrameView.cpp:5680 >> + return layoutViewportRect().size(); > > Have you tested the behavior in MobileSafari/SFSafariViewController/Web.app? I tested MobileSafari and `SFSafariViewController`. I forgot about Web.app, but I just tested it there as well. All misbehave before this patch (`dv*` changes with scale) and correctly work (`dv*` is constant through scaling) after this patch :)
Devin Rousso
Comment 4 2021-11-18 00:26:08 PST
Devin Rousso
Comment 5 2021-11-18 14:19:31 PST
Devin Rousso
Comment 6 2021-11-18 14:28:28 PST
Radar WebKit Bug Importer
Comment 7 2021-11-24 16:22:21 PST
Devin Rousso
Comment 8 2021-11-30 12:53:53 PST
EWS
Comment 9 2021-11-30 22:32:31 PST
Committed r286350 (244709@main): <https://commits.webkit.org/244709@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 445455 [details].
Note You need to log in before you can comment on or make changes to this bug.