[css-values-4] Dynamic `dv*` viewport units should not respect the page scale https://bugs.webkit.org/show_bug.cgi?id=233291

Reviewed by Simon Fraser.

Source/WebCore:

According to the spec (<https://drafts.csswg.org/css-values-4/#viewport-relative-lengths>):
> The viewport-percentage lengths are relative to the size of the initial containing block.
As such, we should really be using the layout viewport, not the visual viewport.

Tests: CSSViewportUnits.AllSame
       CSSViewportUnits.EmptyUnobscuredSizeOverrides
       CSSViewportUnits.SameUnobscuredSizeOverrides
       CSSViewportUnits.DifferentUnobscuredSizeOverrides

* page/FrameView.h:
* page/FrameView.cpp:
(WebCore::FrameView::availableContentSizeChanged):
(WebCore::FrameView::layoutOrVisualViewportChanged):
(WebCore::FrameView::unobscuredContentSizeChanged):
(WebCore::FrameView::sizeForCSSDynamicViewportUnits() const):
Make sure to notify elements using CSS viewport units of changes to the layout viewport.

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/CSSViewportUnits.html:
* TestWebKitAPI/Tests/WebKitCocoa/CSSViewportUnits.mm:
(evaluateForNumber):
(dimensionOfElement): Added.
(widthOfElementWithID): Added.
(heightOfElementWithID): ADded.
(viewportUnitLength): Added.
(TEST.CSSViewportUnits.AllSame):
(TEST.CSSViewportUnits.EmptyUnobscuredSizeOverrides):
(TEST.CSSViewportUnits.SameUnobscuredSizeOverrides):
(TEST.CSSViewportUnits.DifferentUnobscuredSizeOverrides):
(getElementHeight): Deleted.



Canonical link: https://commits.webkit.org/244709@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286350 268f45cc-cd09-0410-ab3c-d52691b4dbfc