Source/WebCore/page/FrameView.h
@@ -922,6 +922,7 @@ private:
     Vector<Function<void()>> m_postLayoutCallbackQueue;
 
     LayoutPoint m_layoutViewportOrigin;
+    LayoutSize m_lastLayoutViewportSize;
     std::optional<LayoutRect> m_layoutViewportOverrideRect;
     std::optional<LayoutRect> m_visualViewportOverrideRect; // Used when the iOS keyboard is showing.
 
